--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "dev": "echo \"Error: dev script specified\" && exit 1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=8.0.0"
+  },
   "author": "Matthew Sells (matthew.sells@proton.me)",
   "license": "UNLICENSED",
   "dependencies": {
