--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Game session REST and Websocket API for Hexx application",
   "scripts": {
-    "dev": "echo \"Error: dev script specified\" && exit 1",
+    "dev": "nodemon ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
