--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Game session REST and Websocket API for Hexx application",
   "scripts": {
     "dev": "nodemon ./src/index.ts",
+    "format": "prettier --write .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
@@ -15,6 +16,7 @@
   "dependencies": {
     "koa": "^2.14.2",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
