--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@types/koa": "^2.13.6"
   }
 }
