--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
-  "name": "@hexx/spellweaver",
-  "version": "1.0.0",
-  "description": "Game session REST and Websocket API for Hexx application",
-  "scripts": {
-    "dev": "nodemon src/index.ts",
-    "format": "prettier --write .",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "pnpm": ">=8.0.0"
-  },
-  "author": "Matthew Sells (matthew.sells@proton.me)",
-  "license": "UNLICENSED",
-  "dependencies": {
-    "@koa/cors": "^4.0.0",
-    "@koa/router": "^12.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "jwks-rsa": "^3.0.1",
-    "koa": "^2.14.2",
-    "nodemon": "^2.0.22",
-    "prettier": "^2.8.8",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
-  },
-  "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/koa": "^2.13.6",
-    "@types/koa__cors": "^4.0.0",
-    "@types/koa__router": "^12.0.0"
-  }
+	"name": "@hexx/spellweaver",
+	"version": "1.0.0",
+	"description": "Game session REST and Websocket API for Hexx application",
+	"scripts": {
+		"dev": "nodemon src/index.ts",
+		"format": "prettier --write .",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"engines": {
+		"node": ">=18.0.0",
+		"pnpm": ">=8.0.0"
+	},
+	"author": "Matthew Sells (matthew.sells@proton.me)",
+	"license": "UNLICENSED",
+	"dependencies": {
+		"@koa/cors": "^4.0.0",
+		"@koa/router": "^12.0.0",
+		"dotenv": "^16.0.3",
+		"jsonwebtoken": "^9.0.0",
+		"jwks-rsa": "^3.0.1",
+		"koa": "^2.14.2",
+		"nodemon": "^2.0.22",
+		"prettier": "^2.8.8",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.0.4"
+	},
+	"devDependencies": {
+		"@ianvs/prettier-plugin-sort-imports": "^3.0.0",
+		"@types/jsonwebtoken": "^9.0.2",
+		"@types/koa": "^2.13.6",
+		"@types/koa__cors": "^4.0.0",
+		"@types/koa__router": "^12.0.0"
+	}
 }
