--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,3 @@
-DATABASE_PASSWORD=""
-DATABASE_USERNAME=""
+DATABASE_URL=""
 
 JWKS_URI="https://ideal-jackal-78.clerk.accounts.dev/.well-known/jwks.json"
