--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,12 @@
 	"compilerOptions": {
 		"target": "ESNext",
 		"module": "NodeNext",
+		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"strictPropertyInitialization": false
 	}
 }
