--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@koa/cors": "^4.0.0",
 		"@koa/router": "^12.0.0",
+		"class-validator": "^0.14.0",
 		"dotenv": "^16.0.3",
 		"jsonwebtoken": "^9.0.0",
 		"jwks-rsa": "^3.0.1",
