--- a/package.json
+++ b/package.json
@@ -16,19 +16,25 @@
 	"dependencies": {
 		"@koa/cors": "^4.0.0",
 		"@koa/router": "^12.0.0",
+		"class-validator": "^0.14.0",
 		"dotenv": "^16.0.3",
 		"jsonwebtoken": "^9.0.0",
 		"jwks-rsa": "^3.0.1",
 		"koa": "^2.14.2",
+		"koa-bodyparser": "^4.4.0",
 		"nodemon": "^2.0.22",
+		"pg": "^8.11.0",
 		"prettier": "^2.8.8",
+		"reflect-metadata": "^0.1.13",
 		"ts-node": "^10.9.1",
+		"typeorm": "^0.3.16",
 		"typescript": "^5.0.4"
 	},
 	"devDependencies": {
 		"@ianvs/prettier-plugin-sort-imports": "^3.0.0",
 		"@types/jsonwebtoken": "^9.0.2",
 		"@types/koa": "^2.13.6",
+		"@types/koa-bodyparser": "^4.3.10",
 		"@types/koa__cors": "^4.0.0",
 		"@types/koa__router": "^12.0.0"
 	}
