--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
 	"version": "1.0.0",
 	"description": "Game session REST and Websocket API for Hexx application",
 	"scripts": {
+		"build": "tsc",
+		"db:reset": "pnpm typeorm schema:drop -d src/db/db.ts",
 		"dev": "nodemon src/index.ts",
 		"format": "prettier --write .",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "pnpm build; node ./dist/index.js",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"typeorm": "typeorm-ts-node-commonjs"
 	},
 	"engines": {
 		"node": ">=18.0.0",
@@ -17,21 +21,21 @@
 		"@koa/cors": "^4.0.0",
 		"@koa/router": "^12.0.0",
 		"class-validator": "^0.14.0",
-		"dotenv": "^16.0.3",
-		"jsonwebtoken": "^9.0.0",
+		"dotenv": "^16.3.1",
+		"jsonwebtoken": "^9.0.1",
 		"jwks-rsa": "^3.0.1",
 		"koa": "^2.14.2",
-		"koa-bodyparser": "^4.4.0",
+		"koa-bodyparser": "^4.4.1",
 		"nodemon": "^2.0.22",
-		"pg": "^8.11.0",
+		"pg": "^8.11.1",
 		"prettier": "^2.8.8",
 		"reflect-metadata": "^0.1.13",
 		"ts-node": "^10.9.1",
-		"typeorm": "^0.3.16",
-		"typescript": "^5.0.4"
+		"typeorm": "^0.3.17",
+		"typescript": "^5.1.6"
 	},
 	"devDependencies": {
-		"@ianvs/prettier-plugin-sort-imports": "^3.0.0",
+		"@ianvs/prettier-plugin-sort-imports": "^3.7.2",
 		"@types/jsonwebtoken": "^9.0.2",
 		"@types/koa": "^2.13.6",
 		"@types/koa-bodyparser": "^4.3.10",
