--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 		"experimentalDecorators": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
+		"outDir": "./dist",
 		"strict": true,
 		"skipLibCheck": true,
 		"strictPropertyInitialization": false
