--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"dev": "nodemon src/index.ts",
 		"format": "prettier --write .",
 		"start": "pnpm build && node ./dist/index.js",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
 		"typeorm": "typeorm-ts-node-commonjs"
 	},
 	"engines": {
@@ -31,15 +31,18 @@
 		"prettier": "^2.8.8",
 		"reflect-metadata": "^0.1.13",
 		"ts-node": "^10.9.1",
-		"typeorm": "^0.3.17",
-		"typescript": "^5.1.6"
+		"typeorm": "^0.3.17"
 	},
 	"devDependencies": {
 		"@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+		"@types/jest": "^29.5.3",
 		"@types/jsonwebtoken": "^9.0.2",
 		"@types/koa": "^2.13.6",
 		"@types/koa-bodyparser": "^4.3.10",
 		"@types/koa__cors": "^4.0.0",
-		"@types/koa__router": "^12.0.0"
+		"@types/koa__router": "^12.0.0",
+		"jest": "^29.6.1",
+		"ts-jest": "^29.1.1",
+		"typescript": "^5.1.6"
 	}
 }
