--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"nodemon": "^3.0.1",
 		"pg": "^8.11.1",
 		"prettier": "^2.8.8",
+		"ramda": "^0.29.0",
 		"reflect-metadata": "^0.1.13",
 		"ts-node": "^10.9.1",
 		"typeorm": "^0.3.17"
@@ -42,6 +43,7 @@
 		"@types/koa-bodyparser": "^4.3.10",
 		"@types/koa__cors": "^4.0.0",
 		"@types/koa__router": "^12.0.0",
+		"@types/ramda": "^0.29.3",
 		"jest": "^29.6.1",
 		"ts-jest": "^29.1.1",
 		"typescript": "^5.1.6"
