--- a/package.json
+++ b/package.json
@@ -1,51 +1,81 @@
 {
-	"name": "@hexx/spellweaver",
-	"version": "1.0.0",
-	"description": "Game session REST and Websocket API for Hexx application",
-	"scripts": {
-		"build": "tsc",
-		"db:reset": "pnpm typeorm schema:drop -d src/db/db.ts",
-		"dev": "nodemon src/index.ts",
-		"format": "prettier --write .",
-		"start": "pnpm build && node ./dist/index.js",
-		"test": "jest",
-		"typeorm": "typeorm-ts-node-commonjs"
-	},
-	"engines": {
-		"node": ">=18.0.0",
-		"pnpm": ">=8.0.0"
-	},
-	"author": "Matthew Sells (matthew.sells@proton.me)",
-	"license": "UNLICENSED",
-	"dependencies": {
-		"@clerk/clerk-sdk-node": "^4.12.1",
-		"@koa/cors": "^4.0.0",
-		"@koa/router": "^12.0.0",
-		"class-validator": "^0.14.0",
-		"dotenv": "^16.3.1",
-		"jsonwebtoken": "^9.0.1",
-		"jwks-rsa": "^3.0.1",
-		"koa": "^2.14.2",
-		"koa-bodyparser": "^4.4.1",
-		"nodemon": "^3.0.1",
-		"pg": "^8.11.1",
-		"prettier": "^2.8.8",
-		"ramda": "^0.29.0",
-		"reflect-metadata": "^0.1.13",
-		"ts-node": "^10.9.1",
-		"typeorm": "^0.3.17"
-	},
-	"devDependencies": {
-		"@ianvs/prettier-plugin-sort-imports": "^3.7.2",
-		"@types/jest": "^29.5.3",
-		"@types/jsonwebtoken": "^9.0.2",
-		"@types/koa": "^2.13.6",
-		"@types/koa-bodyparser": "^4.3.10",
-		"@types/koa__cors": "^4.0.0",
-		"@types/koa__router": "^12.0.0",
-		"@types/ramda": "^0.29.3",
-		"jest": "^29.6.1",
-		"ts-jest": "^29.1.1",
-		"typescript": "^5.1.6"
-	}
+  "name": "spellweaver",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
+  "scripts": {
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
+  },
+  "dependencies": {
+    "@casl/ability": "^6.5.0",
+    "@clerk/clerk-sdk-node": "^4.12.2",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "^2.0.2",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "jsonwebtoken": "^9.0.1",
+    "jwks-rsa": "^3.0.1",
+    "pg": "^8.11.2",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17"
+  },
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/testing": "^10.0.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.5.0",
+    "prettier": "^3.0.0",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.3"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
+  }
 }
