--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -1,33 +1,45 @@
 name: verify
 
-on: pull_request
+on:
+  pull_request:
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
     services:
-      postgres:
-        image: postgres:14-alpine
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
-        ports:
-          - 5432:5432
+        postgres:
+          image: postgres:14
+          env:
+            POSTGRES_USER: postgres
+            POSTGRES_PASSWORD: password
+          ports:
+            - 5432:5432
+          options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.2.2
           bundler-cache: true
-      - name: Run unit tests
+
+      - name: Install dependencies
+        run: |
+          bundle install
+
+      - name: Lint files
+        run: bundle exec rubocop
+
+      - name: Run tests
         env:
           RAILS_ENV: test
-          POSTGRES_HOST: localhost
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
+          DATABASE_URL: postgres://postgres:password@localhost:5432/spellweaver_test
+          PG_USER: postgres
         run: |
-          bin/rails db:create db:schema:load
+          bin/rails db:create db:migrate
           bundle exec rspec
