--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -41,5 +41,5 @@ jobs:
           DATABASE_URL: postgres://postgres:password@localhost:5432/spellweaver_test
           PG_USER: postgres
         run: |
-          bin/rails db:create db:migrate
+          bin/rails db:create db:schema:load
           bundle exec rspec
