--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Spec coverage
+/coverage
+
+# Local config
+.DS_Store
