--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,9 @@ AllCops:
 Metrics/BlockLength:
   Enabled: false
 
+Naming/MethodParameterName:
+  Enabled: false
+
 RSpec/ExampleLength:
   Enabled: false
 
