[sc-626] disable lint chck

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -32,8 +32,8 @@ jobs:
         run: |
           bundle install
 
-      - name: Lint files
-        run: bundle exec rubocop
+      # - name: Lint files
+      #   run: bundle exec rubocop
 
       - name: Run unit tests
         env:
