[sc-643] dockerize services

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 CLERK_API_KEY="sk_test_yR9xn5G5FIHDafzXoiHUH32rmgMomZc14LA3Mc6ekP"
+DATABASE_PASSWORD="postgres"
+DATABASE_USERNAME="postgres"
 JWKS_URI="https://ideal-jackal-78.clerk.accounts.dev/.well-known/jwks.json"
 WEB_CLIENT_HOST="http://localhost:5173"
