--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,10 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: <%= ENV.fetch('RAILS_MAX_THREADS') { 5 } %>
+  username: <%= ENV.fetch('DATABASE_USERNAME') { 'spellweaver' } %>
+  password: <%= ENV.fetch('DATABASE_PASSWORD') { 'spellweaver' } %>
+  host: localhost
 
 development:
   <<: *default
